  - Fix sorting of folder list with non-. delimiter (#1593229).
  - On display "+" symbol on multipart/mixed messages, e.g. those with
    real attachments.
  - Fixes for issues with filters plugin (#1634735).
  - Session not correctly handled on webmail.php (#1685031).
  - session_id reporting session id when no active session (#1685031).
  - sqm_baseuri moved to strings.asp (#1685114).

Version 1.4.9a - 3 December 2006
--------------------------------
  - Security: Multiple IE cross site scripting issues related to the
    widely acceptation of the word expression and url by IE.
  - Security: Removing @import when sanitizing html mail.

Version 1.4.9 - 2 December 2006
-------------------------------
  - Drop obsolete script plugins/make_archive.pl.
  - Fixed Google translate form in translate plugin. Added new language
    pairs.
  - Added XMAGICTRASH extension tests in configtest utility. Removed code
    that handled 'inbox.trash' as special folder in courier (#1354393).
  - Allowed moving folders to trash in courier.
  - Fix misspelled constant PREG_SPLIT_NI_EMPTY in sqimap_get_message
    (#1543573).
  - Provide View Unsafe Images link on viewing a text/html attachment.
  - Fix variable typo in folders_create.php (#1545316).
  - Added Courier IMAP OUTBOX check to configtest utility.
  - If mailbox name starts with slash or contains ../, error message is
    generated. Safety check for insecure default UW IMAP setup (#1557078).
  - Ignore message copy errors when messages are deleted. Allows to delete
    messages when quota is exceeded (#614887, #646386, #1446026).
  - Fixed unintended literal fetching (#1562271).
  - Added global file based address book listing controls. Added line
    length configuration option for local_file address book backend
    (#1181561). Added address book data integrity checks in local_file
    address book backend. Fixed eregi and object notices in local_file
    and database address book backends. Added additional address book